--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "prod": "cross-env NODE_ENV=production node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
