--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "cross-env NODE_ENV=production node server.js",
-    "dev": "nodemon server.js"
+    "prod": "cross-env NODE_ENV=production SOCKET_URI=http://192.168.1.217:3000 node server.js",
+    "dev": " cross-env NODE_ENV=developement SOCKET_URI=http://localhost:3000 nodemon server.js"
   },
   "author": "",
   "license": "ISC",
